Dont crash trying to add an empty list: Filtering for mimetype is not appropriate in the core of the model. As this seems to be about filtering out invalid entries, move it to the Controller.

BUG: 310163